# cplusplus-example

./: README.md
IOStreamTest/: fstreamTest.cpp  sstreamTest.cpp
SOA-EG/: README.md
jsoncppTest/: demo  jsonTest.cpp  jsoncpp.md
lambdaTest/: lambdatest.cpp
memberPointer/: memberVariablePointerTest.cpp
operatorTest/: operatorTest.cpp
protobuf-example/: CMakeLists.txt  README.md  genProto.sh  test_write.cpp
redisTest/: redisTest.cpp  redisTest.md
xmlparse/: SaveGeneralizeTp.cpp  SaveGeneralizeTp.h  commontype.h  main.cpp  shijian.xosc  simproxml.cpp  txml.cpp  txml.h  yanshi.xosc
